cabal-version:   2.2
name:            quickcheck-dynamic-iosim
version:         0.1.0.0
license:         Apache-2.0
license-files:
  LICENSE
  NOTICE

category:  Testing
synopsis:
  A library to implement stateful property-based testing using dynamic logic.

maintainer:      arnaud.bailly@iohk.io
author:          Ulf Norell
homepage:
  https://github.com/input-output-hk/quickcheck-dynamic#readme

bug-reports:
  https://github.com/input-output-hk/quickcheck-dynamic/issues

description:
  Please see the README on GitHub at <https://github.com/input-output-hk/quickcheck-dynamic#readme>

build-type:      Simple
extra-doc-files: README.md

source-repository head
  type:     git
  location: https://github.com/input-output-hk/quickcheck-dynamic

common lang
  default-language:   Haskell2010
  default-extensions:
    ImportQualifiedPost
    TypeFamilies
    TypeApplications
    RankNTypes
    ScopedTypeVariables
    ConstraintKinds
    FlexibleContexts
    StandaloneDeriving
    FlexibleInstances
    GADTs
    MultiParamTypeClasses
    ViewPatterns
    DeriveGeneric

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -Wno-unused-do-bind -Wno-name-shadowing

library
    import: lang
    hs-source-dirs: src
    exposed-modules:
        Test.QuickCheck.StateModel.IOSim
    build-depends:
        base >=4.7 && <5,
        io-classes,
        io-sim,
        stm,
        QuickCheck -any,
        quickcheck-dynamic

test-suite quickcheck-dynamic-iosim-test
    import: lang
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        Spec.DynamicLogic.Registry
        Spec.DynamicLogic.RegistryModel
    ghc-options: -rtsopts
    build-depends:
        QuickCheck -any,
        base >=4.7 && <5,
        containers -any,
        quickcheck-dynamic -any,
        quickcheck-dynamic-iosim -any,
        tasty -any,
        tasty-test-reporter -any,
        tasty-quickcheck -any,
        io-classes,
        io-sim,
        mtl
