cabal-version:   2.2
name:            quickcheck-dynamic
version:         3.1.0
license:         Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:      arnaud.bailly@iohk.io
author:          Ulf Norell
category:        Testing
synopsis:
  A library for stateful property-based testing
homepage:
  https://github.com/input-output-hk/quickcheck-dynamic#readme

bug-reports:
  https://github.com/input-output-hk/quickcheck-dynamic/issues

description:
  Please see the README on GitHub at <https://github.com/input-output-hk/quickcheck-dynamic#readme>

build-type:      Simple
extra-doc-files: README.md
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/input-output-hk/quickcheck-dynamic

common lang
  default-language:   Haskell2010
  default-extensions:
    ConstraintKinds
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DeriveDataTypeable
    StandaloneDeriving
    ImportQualifiedPost
    TupleSections
    LambdaCase
    PatternSynonyms
    GADTs
    TypeApplications
    ScopedTypeVariables
    TypeFamilies
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    RankNTypes
    ViewPatterns
    DefaultSignatures
    TypeOperators
    DerivingVia
    DeriveGeneric
    GeneralizedNewtypeDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -Wno-unused-do-bind

library
    import: lang
    hs-source-dirs: src
    exposed-modules:
        Test.QuickCheck.DynamicLogic
        Test.QuickCheck.DynamicLogic.CanGenerate
        Test.QuickCheck.DynamicLogic.Internal
        Test.QuickCheck.DynamicLogic.Quantify
        Test.QuickCheck.DynamicLogic.SmartShrinking
        Test.QuickCheck.DynamicLogic.Utils
        Test.QuickCheck.Extras
        Test.QuickCheck.StateModel
        Test.QuickCheck.StateModel.Variables
    build-depends:
        QuickCheck -any,
        base >=4.7 && <5,
        random -any,
        mtl -any,
        containers -any,
